--- a/KursApp.csproj
+++ b/KursApp.csproj
@@ -106,6 +106,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auth.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Auth.Designer.cs">
+      <DependentUpon>Auth.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChangeSensorForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,12 +119,6 @@
       <DependentUpon>ChangeSensorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="DatabaseHelper.cs" />
-    <Compile Include="Diagram.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Diagram.Designer.cs">
-      <DependentUpon>Diagram.cs</DependentUpon>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,14 +141,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Container.cs" />
     <Compile Include="Sensor.cs" />
+    <EmbeddedResource Include="Auth.resx">
+      <DependentUpon>Auth.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChangeSensorForm.resx">
       <DependentUpon>ChangeSensorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ChangeContainerForm.resx">
       <DependentUpon>ChangeContainerForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Diagram.resx">
-      <DependentUpon>Diagram.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
